PTI:114: Adding filters to authorizations, back-end changes, fix overflow chop… (#134)
* Adding filters to authorizations, back-end changes, fix overflow chopping off calendar UI

* Fixes nits.

--- a/angular/projects/public-lng/src/assets/styles/themes/default.scss
+++ b/angular/projects/public-lng/src/assets/styles/themes/default.scss
@@ -110,3 +110,8 @@ $table-sort-icon-color:         #ccc;
 $table-sort-icon-active-color:  #000;
 $table-sort-icon-size:          0.25rem;
 $table-row-hover-bg:            #e2f1ff;
+
+// Select Badge Groups
+$select-badge-hover-bg:            #d0ebff;
+$select-badge-active-border-color: #74c0fc;
+$select-badge-active-bg:           #a5d8ff;
